typeUserAttrs bugfix (#851)
* Fix: typeUserAttrs field not showing when value omitted

* Add controls to dist/ update changelog, improve webpack output

* update changelog

--- a/src/sass/_controls.scss
+++ b/src/sass/_controls.scss
@@ -1,5 +1,4 @@
 .cb-wrap {
-  float: right;
   width: 26%;
   transition: transform 250ms;
 
